Fix: Resolve horizontal scrollbar issue on mobile by adding overflow: hidden to navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ body {
     overflow-x: clip;
 }
 #navbar {
-
+    overflow: hidden;
 }
 
 #navbar::before {
